cabal-version:       2.4
name:                grafdhall
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             Apache-2.0
license-file:        LICENSE
author:              Tristan de Cacqueray
maintainer:          Tristan de Cacqueray <tdecacqu@redhat.com>
copyright:           2021 Red Hat
category:            System
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.4

common common-options
  build-depends:       base < 5
                     , aeson
                     , bytestring
                     , dhall
                     , dhall-json
                     , http-client
                     , http-client-tls
                     , http-types
                     , text
                     , unordered-containers

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable grafdhall
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
