cabal-version:       2.4
name:                grafdhall
version:             0.1.0.0
synopsis:            Configure grafana dashboards from Dhall expression
description:
    grafdhall takes Grafana dashboards in Dhall format, and submits them to a grafana service.
    .
homepage:            https://github.com/softwarefactory-project/grafdhall#readme
bug-reports:         https://github.com/softwarefactory-project/grafdhall/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Tristan de Cacqueray
maintainer:          Tristan de Cacqueray <tdecacqu@redhat.com>
copyright:           2021 Red Hat
category:            System
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
                     examples/*.dhall
tested-with:         GHC == 8.10.4

source-repository head
  type:                git
  location:            https://github.com/softwarefactory-project/grafdhall.git

common common-options
  build-depends:       base                   < 5
                     , aeson                  >= 1.0.0.0  && < 1.6
                     , bytestring             < 0.11
                     , dhall                  < 1.39
                     , dhall-json             < 1.8
                     , http-client            >= 0.5.0    && < 0.8
                     , http-client-tls        >= 0.2.0    && < 0.4
                     , http-types             < 1.13
                     , text                   >= 0.11.1.0 && < 1.3
                     , unordered-containers   < 0.3

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable grafdhall
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
